<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nikko.myapplication.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">



    <ImageView
        android:id="@+id/image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginBottom="34dp"
        android:layout_above="@+id/l1"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/l1"
        android:layout_width="136dp"
        android:layout_height="40dp"
        android:text="@string/welcome"
        android:textSize="32dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/Students"
        android:layout_width="206dp"
        android:layout_height="55dp"
        android:text="@string/students"
        android:layout_above="@+id/Teachers"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp" />

    <Button
        android:id="@+id/Teachers"
        android:layout_width="206dp"
        android:layout_height="55dp"
        android:text="@string/teachers"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp" />

</android.widget.RelativeLayout>
