<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nikko.myapplication.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <!--XML File for welcome screen-->

        <ImageView
            android:id="@+id/image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:contentDescription="@null"
            android:layout_marginEnd="3dp"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/l1"
            android:layout_marginTop="81dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="186dp" />
        <TextView
            android:id="@+id/l1"
            android:layout_width="136dp"
            android:layout_height="40dp"
            android:text="@string/welcome"
            android:textSize="32sp"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="@+id/Teachers"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="182dp"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="181dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image1" />

        <Button
            android:id="@+id/Students"
            android:layout_width="206dp"
            android:layout_height="55dp"
            android:text="@string/students"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="@+id/Teachers"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="81dp"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="85dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/l1" />

        <Button
            android:id="@+id/Teachers"
            android:layout_width="206dp"
            android:layout_height="55dp"
            android:text="@string/teachers"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="81dp"
            app:layout_constraintLeft_toLeftOf="parent" />

    </android.support.constraint.ConstraintLayout>
